--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.72"
+clap = { version = "4.3.21", features = ["derive"] }
 protobuf = "3.2.0"
 protobuf-json-mapping = "3.2.0"
 rand = "0.8.5"
