--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ clap = { version = "4.3.21", features = ["derive"] }
 protobuf = "3.2.0"
 protobuf-json-mapping = "3.2.0"
 rand = "0.8.5"
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.4" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.4" }
+reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
 thiserror = "1.0.44"
 
 [dev-dependencies]
