--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.72"
 clap = { version = "4.3.21", features = ["derive"] }
 protobuf = "=3.2.0"
 protobuf-json-mapping = "=3.2.0"
+revm-primitives = "=1.1.2"
 rand = "0.8.5"
 reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
 reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
