refactor: performance improvements for streaming data
Signed-off-by: Severiano Sisneros <seve.sisneros@protonmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde_json = "1.0.104"
 serde = { version = "1.0.180", features = ["derive"] }
 ethportal-api = "0.2.2"
 zstd = "0.13.0"
+simple-log = "1.6.0"
+rayon = "1.8.0"
 # ethportal-api = { git = "https://github.com/ethereum/trin.git", version = "0.2.2" } 
 
 [dev-dependencies]
