--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ zstd = "0.13.0"
 simple-log = "1.6.0"
 rayon = "1.8.0"
 ethereum-types = "=0.14.1"
+bincode = "1.3.3"
 # ethportal-api = { git = "https://github.com/ethereum/trin.git", version = "0.2.2" } 
 
 [dev-dependencies]
