--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 clap = { version = "4.3.21", features = ["derive"] }
-protobuf = "=3.2.0"
+protobuf = { version = "=3.2.0", features = ["bytes", "with-bytes"] }
 protobuf-json-mapping = "=3.2.0"
 revm-primitives = "=1.1.2"
 rand = "0.8.5"
@@ -24,6 +24,8 @@ simple-log = "1.6.0"
 rayon = "1.8.0"
 ethereum-types = "=0.14.1"
 bincode = "1.3.3"
+prost = "0.12.3"
+prost-types = "0.12.3"
 # ethportal-api = { git = "https://github.com/ethereum/trin.git", version = "0.2.2" } 
 
 [dev-dependencies]
@@ -36,3 +38,6 @@ harness = false
 [profile.release]
 codegen-units = 1
 lto = false
+
+[build-dependencies]
+prost-build = "0.12.3"
