--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ ethereum-types = "=0.14.1"
 bincode = "1.3.3"
 prost = "0.12.3"
 prost-types = "0.12.3"
+tokio = { version = "1.35.0", features = ["full"] }
 # ethportal-api = { git = "https://github.com/ethereum/trin.git", version = "0.2.2" } 
 
 [dev-dependencies]
