--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rand = "0.8.5"
 reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
 reth-rlp = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
 thiserror = "1.0.44"
-serde_json = "1.0.104"
+serde_json = "1.0.108"
 serde = { version = "1.0.180", features = ["derive"] }
 zstd = "0.13.0"
 simple-log = "1.6.0"
@@ -23,6 +23,8 @@ bincode = "1.3.3"
 prost = "0.12.3"
 prost-types = "0.12.3"
 tokio = { version = "1.35.0", features = ["full"] }
+prost-wkt = "0.5.0"
+prost-wkt-types = "0.5.0"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
@@ -41,3 +43,4 @@ lto = false
 
 [build-dependencies]
 prost-build = "0.12.3"
+prost-wkt-build = "0.5.0"
