--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,23 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 clap = { version = "4.3.21", features = ["derive"] }
-protobuf = "=3.2.0"
-protobuf-json-mapping = "=3.2.0"
 revm-primitives = "=1.1.2"
 rand = "0.8.5"
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
 reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
 reth-rlp = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
 thiserror = "1.0.44"
-serde_json = "1.0.104"
+serde_json = "1.0.108"
 serde = { version = "1.0.180", features = ["derive"] }
+zstd = "0.13.0"
+simple-log = "1.6.0"
+rayon = "1.8.0"
+ethereum-types = "=0.14.1"
+bincode = "1.3.3"
+prost = "0.12.3"
+prost-types = "0.12.3"
+tokio = { version = "1.35.0", features = ["full"] }
+prost-wkt = "0.5.0"
+prost-wkt-types = "0.5.0"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
@@ -25,3 +32,15 @@ criterion = { version = "0.5.1", features = ["html_reports"] }
 [[bench]]
 name = "decoder"
 harness = false
+
+[[bench]]
+name = "stream_blocks"
+harness = false
+
+[profile.release]
+codegen-units = 1
+lto = false
+
+[build-dependencies]
+prost-build = "0.12.3"
+prost-wkt-build = "0.5.0"
