--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ prost-types = "0.12.3"
 tokio = { version = "1.35.0", features = ["full"] }
 prost-wkt = "0.5.0"
 prost-wkt-types = "0.5.0"
+tokio-test = "0.4.3"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
