--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,15 @@ jobs:
       - uses: actions/checkout@v3
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       
+      - name: Install Rustfmt
+        run: rustup component add rustfmt
+      - name: Check code formatting
+        run: cargo fmt -- --check
+
       - name: Install Clippy
         run: rustup component add clippy
       - name: Run Clippy
-        run: cargo clippy -- -D warnings
+        run: cargo clippy 
 
       - name: Install Protoc
         run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
