--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ rayon = "1.8.0"
 ethereum-types = "=0.14.1"
 bincode = "1.3.3"
 tokio = { version = "1.35.0", features = ["full"] }
-sf-protos = { git = "ssh://github.com/semiotic-ai/sf-protos.git", branch = "main" }
+sf-protos = { git = "https://github.com/semiotic-ai/sf-protos.git", branch = "main" }
 
 prost = "0.12.3"
 prost-types = "0.12.3"
