--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ reth-trie-common = { git = "https://github.com/paradigmxyz/reth", version = "1.0
 revm-primitives = "=6.0.0"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.108"
-sf-protos = { git = "https://github.com/semiotic-ai/sf-protos.git", version = "0.1.0" }
+sf-protos = { git = "https://github.com/semiotic-ai/sf-protos.git", branch = "main" }
 simple-log = "1.6.0"
 thiserror = "1.0.44"
 tokio = { version = "1.35.0", features = ["full"] }
