--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: Cargo Build & Test
 
 on:
   push:
+    branches: [main]
   pull_request:
+  workflow_dispatch:
 
 env: 
   CARGO_TERM_COLOR: always
@@ -34,4 +36,3 @@ jobs:
 
       - run: cargo build --verbose
       - run: cargo test --verbose
-      
